--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -1,54 +1,47 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Kamaren Sandhu's Profile</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <head>
+    <meta charset="utf-8">
+    <title>Kamaren Sandhu's Profile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+  </head>
+  <!-- All webpages were tested on Google Chrome Broswer -->
   <body>
-
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Kamaren Sandhu</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/fsulogo.png" alt="Drawing of Jane Smith" class="profile-image">
+      <img src="images/new_profile_pic.png" alt="Image of FSU Logo" class="profile-image">
       <h1 class="tag name">Hello, I’m Kamaren.</h1>
-      <p class="tag location">My home is Winter Garden, Florida.</p>
+      <p class="tag location">My home is Winter Garden</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have attended many different schools. I am currenty a student at Florida State University trying to get my treehouse techdegree while attending my normal college classes. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I’ve been a competitive golfer and a student for most of my life and am a life-long learner who's always interested in expanding my skills.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Python</li>
-        </ul>
+        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in web development</p>
         <p>I’d like to do freelance work helping clients create an impressive online presence while being able to save up money.</p>
       </div> 
-
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://github.com/Kamaren/Project-1" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Kamaren Sandhu</p>
+      <p class="copyright">Copyright 2020, Kamaren Sandhu</p>
     </footer>
   </body>
   </html>
