Edited the hobbies page
I added a hobbies page in the last edit so that I have a link to another webpage within the site for the exceeds credit on rubrik. I copied the same outline from the previous two pages but added different content

--- a/portfolio_update_v1/hobbies.html
+++ b/portfolio_update_v1/hobbies.html
@@ -24,15 +24,15 @@
 
         <main class="flex">
             <div class="card">
-            <h2>Hobbies</h2>
-            <p>Some of my favorite hobbies are hanging out with my friends, playing video games, and going to the gym. I also like to play and watch all kinds of sports with my friends.</p>
-            <p>I also enjoy many sports such as Golf, Basketball, and Swimming.</p>
+                <h2>Hobbies</h2>
+                <p>Some of my favorite hobbies are hanging out with my friends, playing video games, and going to the gym. I also like to play and watch all kinds of sports with my friends.</p>
+                <p>Some of the sports I enjoy playing and watching are Golf, Basketball, and Swimming.</p>
             </div>
         </main>
         <footer>
             <ul>
                 <li><a href="https://github.com/Kamaren/Project-1" class="social github">Github</a></li>
-              </ul>
-              <p class="copyright">Copyright 2020, Kamaren Sandhu</p>            
+            </ul>
+            <p class="copyright">Copyright 2020, Kamaren Sandhu</p>            
         </footer>
     </body>
