Added images to multiple pages
I added images to both index.html and hobbies.html and formatted them to look good in the browser

--- a/portfolio_update_v1/hobbies.html
+++ b/portfolio_update_v1/hobbies.html
@@ -23,10 +23,13 @@
         </header>
 
         <main class="flex">
-            <div class="card">
+            <div class="hobbies-card">
                 <h2>Hobbies</h2>
                 <p>Some of my favorite hobbies are hanging out with my friends, playing video games, and going to the gym. I also like to play and watch all kinds of sports with my friends.</p>
                 <p>Some of the sports I enjoy playing and watching are Golf, Basketball, and Swimming.</p>
+                <img class="golf-image" src="images/golfball.jpg" alt="Picture of golf ball">
+                <img class="basketball-image" src="images/basketball.jpg" alt="Picture of basketball">
+                <img class="swimming-image" src="images/swimming.jpg" alt="Picture of someone swimming">    
             </div>
         </main>
         <footer>
