--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -28,6 +28,9 @@
       <div class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have attended many different schools. I am currenty a student at Florida State University trying to get my treehouse techdegree while attending my normal college classes. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+
+        <img class="extra-image" src="images/fsupic.jpg" alt="Picture of FSU building">
+
         <p>I’ve been a competitive golfer and a student for most of my life and am a life-long learner who's always interested in expanding my skills.</p>
       </div> 
 
@@ -35,6 +38,8 @@
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in web development</p>
         <p>I’d like to do freelance work helping clients create an impressive online presence while being able to save up money.</p>
+
+        <img class="extra-image" src="images/skills.jpg" alt="Representation of skills">
       </div> 
     </main>
     <footer>
