Change the titles for two of the pages.
Changed title as well as adjusted the size of the hobbies card so all pictures would fit clearly.

--- a/portfolio_update_v1/experience.html
+++ b/portfolio_update_v1/experience.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Kamaren Sandhu's Profile</title>
+    <title>Kamaren Sandhu's Experience</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
@@ -21,7 +21,6 @@
     <header>
       <img src="images/new_profile_pic.png" alt="Image of FSU Logo" class="profile-image">
       <h1 class="tag name">Experience</h1>
-      <p class="tag location">My home is Winter Garden</p>
     </header>
 
     <main class="flex">
