--- a/portfolio_update_v1/hobbies.html
+++ b/portfolio_update_v1/hobbies.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Kamaren Sandhu's Profile</title>
+        <title>Kamaren Sandhu's Hobbies</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
@@ -18,8 +18,7 @@
         </div>
         <header>
             <img src="images/new_profile_pic.png" alt="Image of FSU Logo" class="profile-image">
-            <h1 class="tag name">Hello, I’m Kamaren.</h1>
-            <p class="tag location">My home is Winter Garden</p>
+            <h1 class="tag name">Hobbies</h1>
         </header>
 
         <main class="flex">
