Updated semantics and file sizes
I adjusted the background file size to be less than 1MB and I have changed the semantics of all html files so that all "div" elements are now "section" elements

--- a/portfolio_update_v1/experience.html
+++ b/portfolio_update_v1/experience.html
@@ -9,14 +9,14 @@
   </head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Kamaren Sandhu</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/new_profile_pic.png" alt="Image of FSU Logo" class="profile-image">
@@ -24,13 +24,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>I have begun to learn many different languages while attending college. The list of languages I have started to learn are located on the right under the "Skills" section.</p>
         <p>I am excited to continue learning about different languages and become a master web developer using multiple languages.</p>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Skills</h2>
         <p>Here is a list of current languages I have had experience using in the past and skills I am continuing to develop.</p>
         <ul class="skills">
@@ -41,8 +41,7 @@
           <li>C++</li>
           <li>Java</li>
         </ul>
-      </div> 
-
+      </section> 
     </main>
     <footer>
       <ul>
