--- a/portfolio_update_v1/hobbies.html
+++ b/portfolio_update_v1/hobbies.html
@@ -8,28 +8,28 @@
         <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
     </head>
     <body>
-        <div class="main-nav">
+        <nav class="main-nav">
             <ul class="nav">
             <li class="name">Kamaren Sandhu</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
             </ul>
-        </div>
+        </nav>
         <header>
             <img src="images/new_profile_pic.png" alt="Image of FSU Logo" class="profile-image">
             <h1 class="tag name">Hobbies</h1>
         </header>
 
         <main class="flex">
-            <div class="hobbies-card">
+            <section class="hobbies-card">
                 <h2>Hobbies</h2>
                 <p>Some of my favorite hobbies are hanging out with my friends, playing video games, and going to the gym. I also like to play and watch all kinds of sports with my friends.</p>
                 <p>Some of the sports I enjoy playing and watching are Golf, Basketball, and Swimming.</p>
                 <img class="golf-image" src="images/golfball.jpg" alt="Picture of golf ball">
                 <img class="basketball-image" src="images/basketball.jpg" alt="Picture of basketball">
                 <img class="swimming-image" src="images/swimming.jpg" alt="Picture of someone swimming">    
-            </div>
+            </section>
         </main>
         <footer>
             <ul>
